# openapi/components/schemas/model/DentClaim.yaml
@@ -65,6 +65,11 @@ properties:
     items:
       $ref: "./DentLine.yaml"
     x-edi-loop-id: "2400"
+  validationIssues:
+    description: "Validation issues."
+    type: "array"
+    items:
+      $ref: "./ValidationIssue.yaml"
   transaction:
     description: "Parent EDI transaction for this object. EDI: ST."
     $ref: "./Transaction837.yaml"
